# sdl2-lua53-example

./: .gitignore  CMakeLists.txt  INSTALL_LUA.md  INSTALL_SDL.md  README.md  REQUIREMENTS.md
src/: main.c  script.lua  settings.lua
